fix card group visibility

--- a/src/components/CardGroup/styles.scss
+++ b/src/components/CardGroup/styles.scss
@@ -1,12 +1,13 @@
 .card-group {
-  min-width: 100vw;
   display: flex;
   flex-direction: row;
-  overflow-x: scroll;
+  overflow-x: auto;
   column-gap: 20px;
-  padding-top: 10px;
+  padding: 10px 20px 10px 0;
+  box-sizing: content-box;
 }
 
-.card-group::-webkit-scrollbar {
-  display: none; /* Hide the scrollbar */
+.card-group-wrapper {
+  overflow-x: hidden;
+  max-width: 100vw;
 }
