--- a/src/pages/HomePage/styles.scss
+++ b/src/pages/HomePage/styles.scss
@@ -35,14 +35,14 @@
   &__content {
     display: flex;
     flex-direction: column;
-    padding: 80px 80px;
+    padding: 80px 60px;
     row-gap: 120px;
   }
 }
 
 @media screen and (min-width: 300px) and (max-width: 700px) {
   .home__hero {
-    padding: 0 10% 30px 20px;
+    padding: 0 10px 30px 20px;
   }
   .home__content {
     padding: 40px 20px;
